# reverde

./: .gitignore  LICENSE.txt  README.md  pyproject.toml
image/: reverde.xcf  reverde_small.xcf
plugins/: pascal.py
reverde/: __init__.py  __main__.py  api.py  form.py  pdf-images.py  vb.py
test-data/: output.txt
